--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     min-height: 100vh;
     width: 100%;
 
-    background-color: #217c24;
+    background-color: #4ca14f;
     background-image: linear-gradient(62deg, #217c24 22%, #0b4e0c 100%);
 
     overflow-x: hidden;
@@ -131,7 +131,7 @@ header{
 }
 
 .inner{
-    max-width: 35rem;
+    max-width: 45rem;
     text-align: center;
     color: #fff;
 
@@ -139,7 +139,10 @@ header{
 }
 
 .title{
-    font-size: 3rem;
+    font-size: 4rem;
+}
+.title span{
+    color:#29b546;
 }
 
 .btn{
@@ -153,6 +156,7 @@ header{
     text-transform: uppercase;
     cursor: pointer;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 .container.active .bar::before{
